k8s/app/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssc-beer-service
  namespace: dev-to
  labels:
    app: mssc-beer-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssc-beer-service
  template:
      metadata:
        labels:
          app: mssc-beer-service
      spec:
        containers:
          - name: mssc-beer-service
            image: java-k8s:latest
            imagePullPolicy: Never
            ports:
              - containerPort: 8080
                name: http
            livenessProbe:
              httpGet:
                path: /app/actuator/health/liveness
                port: 8080
              initialDelaySeconds: 30
            readinessProbe:
              httpGet:
                path: /app/actuator/health/readiness
                port: 8080
              initialDelaySeconds: 30
            resources:
              requests:
                memory: "512Mi"
                cpu: "0.5"
              limits:
                memory: "1024Mi"
                cpu: "1"
