k8s/app/app-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mssc-beer-service
  namespace: dev-to
spec:
  rules:
    - host: dev.local
      http:
        paths:
          - path: /app
            backend:
              serviceName: mssc-beer-service
              servicePort: 8080
